--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,6 +39,8 @@
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
+
+    --radius: 8px
   }
 
   .dark {
